--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,20 +45,20 @@ dependencies {
     implementation("phonepe.intentsdk.android.release:IntentSDK:2.3.0")
 
 
-  //  implementation('com.razorpay:checkout:1.6.20')
-
-
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
-// Lifecycles only (without ViewModel or LiveData)
     implementation 'androidx.lifecycle:lifecycle-runtime:2.6.1'
 
 
-  /*  implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'*/
+
+    //Razorpay
+    implementation('com.razorpay:checkout:1.6.20')
+
+
+
+
+
+
 
 }
